Comple Flex Card (non-responsive)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "css-w": "npx tailwindcss -i ./src/style.css -o ./public/compiled.style.css -w",
+    "css-w:2": "npx tailwindcss -i ./src/style2.css -o ./public/compiled.style2.css -w",
+    "css-w:3": "npx tailwindcss -i ./src/style3.css -o ./public/compiled.style3.css -w",
     "serve-w": "browser-sync start -c bs.config.js"
   },
   "devDependencies": {
